<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="title_activity_lecture_list">LectureListActivity</string>
    <string name="title_activity_lecture_detail">LectureDetailActivity</string>
    <string name="title_activity_lecture_file">LectureFileActivity</string>
    <string name="explorer">Explorer</string>
    <string name="dialog_read_from_dir">Open from dir</string>

    <array name="day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </array>

    <array name="hour_array">
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>17:00</item>
    </array>

    <array name="fileEndingImage">
        <item>.png</item>
        <item>.gif</item>
        <item>.jpg</item>
        <item>.jpeg</item>
        <item>.bmp</item>
    </array>
    <array name="fileEndingAudio">
        <item>.mp3</item>
        <item>.wav</item>
        <item>.ogg</item>
        <item>.midi</item>
    </array>
    <array name="fileEndingVideo">
        <item>.mp4</item>
        <item>.rmvb</item>
        <item>.avi</item>
        <item>.flv</item>
    </array>
    <array name="fileEndingPackage">
        <item>.jar</item>
        <item>.zip</item>
        <item>.rar</item>
        <item>.gz</item>
        <item>.apk</item>
        <item>.img</item>
    </array>
    <array name="fileEndingWebText">
        <item>.htm</item>
        <item>.html</item>
        <item>.php</item>
        <item>.jsp</item>
    </array>
    <array name="fileEndingText">
        <item>.txt</item>
        <item>.java</item>
        <item>.c</item>
        <item>.cpp</item>
        <item>.py</item>
        <item>.xml</item>
        <item>.json</item>
        <item>.log</item>
    </array>
    <array name="fileEndingWord">
        <item>.doc</item>
        <item>.docx</item>
    </array>
    <array name="fileEndingExcel">
        <item>.xls</item>
        <item>.xlsx</item>
    </array>
    <array name="fileEndingPPT">
        <item>.ppt</item>
        <item>.pptx</item>
    </array>
    <array name="fileEndingPdf">
        <item>.pdf</item>
    </array>

    <string name="title_activity_lecture_master_detail">LectureMasterDetailActivity</string>
    <string name="title_activity_lecture_input">LectureInputActivity</string>

</resources>
