<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:id="@+id/btn_mon"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#46156a"
        android:textColor="#FFFFFF"
        android:onClick="selectDay" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:id="@+id/btn_tue"
        android:layout_below="@+id/btn_mon"
        android:layout_alignStart="@+id/btn_mon"
        android:layout_marginTop="34dp"
        android:layout_alignParentEnd="true"
        android:textColor="#FFFFFF"
        android:background="#46156a"
        android:onClick="selectDay" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:id="@+id/btn_wed"
        android:layout_below="@+id/btn_tue"
        android:layout_alignStart="@+id/btn_tue"
        android:layout_marginTop="34dp"
        android:layout_alignParentEnd="true"
        android:textColor="#FFFFFF"
        android:background="#46156a"
        android:onClick="selectDay" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:id="@+id/btn_thur"
        android:layout_below="@+id/btn_wed"
        android:layout_alignStart="@+id/btn_wed"
        android:layout_marginTop="34dp"
        android:layout_alignParentEnd="true"
        android:textColor="#FFFFFF"
        android:background="#46156a"
        android:onClick="selectDay" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:id="@+id/btn_fri"
        android:layout_below="@+id/btn_thur"
        android:layout_alignStart="@+id/btn_thur"
        android:layout_marginTop="34dp"
        android:layout_alignParentEnd="true"
        android:textColor="#FFFFFF"
        android:background="#46156a"
        android:onClick="selectDay" />

</RelativeLayout>
